data/collection/fixes/descriptions/scala/scala-8207
The following compiles in Scala 2.10.3

```scala
class RichInt(val toInt: Int) extends AnyVal { me =>
  import me.{toInt => i}

  def squared: Long = i.toLong * i.toLong
}
```

But not in Scala 2.11.0-M8:

```scala
<console>:8: error: stable identifier required, but RichInt.this found.
        import me.{toInt => i}
               ^
```